<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PageStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/contentGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:constraint_referenced_ids="curLocation,curHumid_textView,curPress_textView,currentTemp_textView,curWindDir_textView,curWindSpeed_textView,speed_textView,direction_textView,humidity_textView,pressure_textView"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/errorGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="error_textView,error_imageView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/curLocation"
        style="@style/WeatherText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/big_textSize"
        app:layout_constraintBottom_toTopOf="@id/currentTemp_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Location" />

    <TextView
        android:id="@+id/currentTemp_textView"
        style="@style/WeatherText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/biggest_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="t" />

    <TextView
        android:id="@+id/speed_textView"
        style="@style/WeatherText.SmallParameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/speed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/direction_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentTemp_textView" />

    <TextView
        android:id="@+id/direction_textView"
        style="@style/WeatherText.SmallParameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/direction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/humidity_textView"
        app:layout_constraintStart_toEndOf="@id/speed_textView"
        app:layout_constraintTop_toBottomOf="@id/currentTemp_textView" />

    <TextView
        android:id="@+id/humidity_textView"
        style="@style/WeatherText.SmallParameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pressure_textView"
        app:layout_constraintStart_toEndOf="@id/direction_textView"
        app:layout_constraintTop_toBottomOf="@id/currentTemp_textView" />

    <TextView
        android:id="@+id/pressure_textView"
        style="@style/WeatherText.SmallParameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/humidity_textView"
        app:layout_constraintTop_toBottomOf="@id/currentTemp_textView" />


    <TextView
        android:id="@+id/curWindSpeed_textView"
        style="@style/WeatherText.SmallParameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/curWindDir_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_textView"
        tools:text="speed" />

    <TextView
        android:id="@+id/curWindDir_textView"
        style="@style/WeatherText.SmallParameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/curHumid_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/curWindSpeed_textView"
        app:layout_constraintTop_toTopOf="@+id/curWindSpeed_textView"
        tools:text="dir" />

    <TextView
        android:id="@+id/curHumid_textView"
        style="@style/WeatherText.SmallParameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/curPress_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/curWindDir_textView"
        app:layout_constraintTop_toTopOf="@+id/curWindSpeed_textView"
        tools:text="hum" />

    <TextView
        android:id="@+id/curPress_textView"
        style="@style/WeatherText.SmallParameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/curHumid_textView"
        app:layout_constraintTop_toTopOf="@+id/curWindSpeed_textView"
        tools:text="pres" />

    <ProgressBar
        android:id="@+id/currentLoadingProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/error_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/extra_large"
        android:layout_marginEnd="@dimen/extra_large"
        android:layout_marginStart="@dimen/extra_large"
        android:alpha="0.5"
        android:src="@drawable/img_splash"
        app:layout_constraintBottom_toTopOf="@+id/error_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/error_textView"
        style="@style/WeatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large"
        android:gravity="center"
        android:textSize="@dimen/big_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/extra_large"
        tools:text="@string/error"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>